[WGSL] Error opening https://threejs.org/examples/?q=webgpu#webgpu_compute_texture_pingpong https://bugs.webkit.org/show_bug.cgi?id=264272 rdar://118009042

Reviewed by Mike Wyrzykowski.

During code generation we were cleaning out the flag that we needed to generate
the division helper, but that is incorrect, since the flag is only set during
type checking, so it won't be set for subsequent compilations. The reason the other
similar flags around it need to be cleaned is that they are set during compilation
instead of checking. This whole system needs to be rafactored soon, but in the
mean time this fixes the sample.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::setUsesWorkgroupUniformLoad):
(WGSL::ShaderModule::setUsesDivision):
(WGSL::ShaderModule::clearUsesWorkgroupUniformLoad): Deleted.
(WGSL::ShaderModule::clearUsesDivision): Deleted.

Canonical link: https://commits.webkit.org/270328@main